@@ -27,14 +27,14 @@ The code is also available within this repository within ```docs/sources/hello-w
 
 #### Go/Gin   
 
-```go
+```go title="The Go code from the article"
 --8<-- "sources/hello-world-article/hello-world-go/main.go"
 ```
 
 Here the steps to run this code:
 
 - Open two terminal consoles
-- Create a directory like ```hello-world-go```
+- Create a directory like ```hello-world-go``` and ```cd``` in the directory
 - Create a file called ```main.go``` and copy the above code in
 - Initialize the module(s) for the project:  
 
@@ -77,7 +77,7 @@ Please check https://pkg.go.dev/github.com/gin-gonic/gin#readme-don-t-trust-all-
 [GIN-debug] Listening and serving HTTP on :3000
 ```
 
-- In the second console, use ```curl``` to check the service:
+- In a second console, use ```curl``` to check the service:
 
 ```
 curl localhost:3000
@@ -98,7 +98,7 @@ go build -o hello-world main.go
 
 Resulting in the creating a binary called ```hello-world``` with the following size:
 
-```bash
+```
 -rwxr-xr-x   1 romdalf  staff   9.5M Dec 25 10:32 hello-world
 ```
 
@@ -125,30 +125,23 @@ Please check https://pkg.go.dev/github.com/gin-gonic/gin#readme-don-t-trust-all-
 
 #### Quarkus   
 
-```java
+```java title="The Java/Quarkus code from the article"
 --8<-- "sources/hello-world-article/hello-world-quarkus/src/main/java/org/acme/HelloWorldApplication.java"
 ```
 
-To install Quarkus CLI, you can follow the official [Get Started](https://quarkus.io/get-started/) procedure by executing the following command in your favorite CLI:
+Here are the steps to run this code:   
+
+- Open two terminal consoles
+- Create a Quarkus project and ```cd``` in the directory:
 
 ```
-curl -Ls https://sh.jbang.dev | bash -s - trust add https://repo1.maven.org/maven2/io/quarkus/quarkus-cli/
-curl -Ls https://sh.jbang.dev | bash -s - app install --fresh --force quarkus@quarkusio
-```
-***Note: Remember to always check these scripts before executing them!***
-
-Create the hello-world project with 
-```
-quarkus create app org.acme:hello-world --extension='resteasy-reactive'
+quarkus create app org.acme:hello-world-quarkus
 ```
 
-Output
+Resulting in the following output:
+
 ```
-Looking for the newly published extensions in registry.quarkus.io
 -----------
-selected extensions: 
-- io.quarkus:quarkus-resteasy-reactive
-
 
 applying codestarts...
 📚 java
@@ -161,9 +154,90 @@ applying codestarts...
 
 -----------
 [SUCCESS] ✅  quarkus project has been successfully generated in:
---> /Users/romdalf/dev/opensource/ocp-projects/docs/sources/hello-world-article/quarkus/hello-world
+--> /Users/romdalf/dev/hello-world-quarkus
 -----------
 Navigate into this directory and get started: quarkus dev
 ```
 
-edit the 
+- Edit the file ```src/main/java/org/acme/GreetingResource.java``` to replace the code with the article one (see above)
+- Rename the file ```src/main/java/org/acme/GreetingResource.java```to ```src/main/java/org/acme/HelloWorldApplication.java```:
+
+```
+mv src/main/java/org/acme/GreetingResource.java src/main/java/org/acme/HelloWorldApplication.java
+```
+
+***Note: the ```classname``` needs to match the filename.*** 
+
+- Remove the default ```resources``` directory:
+
+```
+rm -rf src/main/resources/
+```
+
+- In onf of the console, run the code:
+
+```
+quarkus dev
+```
+
+Resulting in the following output:
+
+```
+[INFO] Scanning for projects...
+[INFO] 
+[INFO] --------------------< org.acme:hello-world-quarkus >--------------------
+[INFO] Building hello-world-quarkus 1.0.0-SNAPSHOT
+[INFO]   from pom.xml
+[INFO] --------------------------------[ jar ]---------------------------------
+[INFO] 
+[INFO] --- quarkus:3.6.4:dev (default-cli) @ hello-world-quarkus ---
+[INFO] Invoking resources:3.3.1:resources (default-resources) @ hello-world-quarkus
+[INFO] skip non existing resourceDirectory /Users/romdalf/dev/hello-world-quarkus/src/main/resources
+[INFO] Invoking quarkus:3.6.4:generate-code (default) @ hello-world-quarkus
+[INFO] Invoking compiler:3.11.0:compile (default-compile) @ hello-world-quarkus
+[INFO] Changes detected - recompiling the module! :source
+[INFO] Compiling 1 source file with javac [debug release 21] to target/classes
+[INFO] Annotation processing is enabled because one or more processors were found
+  on the class path. A future release of javac may disable annotation processing
+  unless at least one processor is specified by name (-processor), or a search
+  path is specified (--processor-path, --processor-module-path), or annotation
+  processing is enabled explicitly (-proc:only, -proc:full).
+  Use -Xlint:-options to suppress this message.
+  Use -proc:none to disable annotation processing.
+[INFO] Invoking resources:3.3.1:testResources (default-testResources) @ hello-world-quarkus
+[INFO] skip non existing resourceDirectory /Users/romdalf/dev/hello-world-quarkus/src/test/resources
+[INFO] Invoking quarkus:3.6.4:generate-code-tests (default) @ hello-world-quarkus
+[INFO] Invoking compiler:3.11.0:testCompile (default-testCompile) @ hello-world-quarkus
+[INFO] Changes detected - recompiling the module! :dependency
+[INFO] Compiling 2 source files with javac [debug release 21] to target/test-classes
+[INFO] Annotation processing is enabled because one or more processors were found
+  on the class path. A future release of javac may disable annotation processing
+  unless at least one processor is specified by name (-processor), or a search
+  path is specified (--processor-path, --processor-module-path), or annotation
+  processing is enabled explicitly (-proc:only, -proc:full).
+  Use -Xlint:-options to suppress this message.
+  Use -proc:none to disable annotation processing.
+Listening for transport dt_socket at address: 5005
+__  ____  __  _____   ___  __ ____  ______ 
+ --/ __ \/ / / / _ | / _ \/ //_/ / / / __/ 
+ -/ /_/ / /_/ / __ |/ , _/ ,< / /_/ /\ \   
+--\___\_\____/_/ |_/_/|_/_/|_|\____/___/   
+2023-12-25 11:05:17,735 INFO  [io.quarkus] (Quarkus Main Thread) hello-world-quarkus 1.0.0-SNAPSHOT on JVM (powered by Quarkus 3.6.4) started in 1.076s. Listening on: http://localhost:8080
+
+2023-12-25 11:05:17,737 INFO  [io.quarkus] (Quarkus Main Thread) Profile dev activated. Live Coding activated.
+2023-12-25 11:05:17,738 INFO  [io.quarkus] (Quarkus Main Thread) Installed features: [cdi, resteasy-reactive, smallrye-context-propagation, vertx]
+``` 
+
+- In a second console, use ```curl``` to check the service:
+
+```
+curl localhost:8000
+```
+
+Resulting in the following output:
+```
+Hello World!%
+```
+
+***Note that there is no output logged into the first console where the service is running.***
+
